# far-coder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/swe_bench/: README.md  _wsl_setup.sh  ablation.py  compare.py  isolation.py  locator.py  results-2026-05-01.md  run.py  score.py  setup_wsl.sh  solve.py
src/ai_coder/: chat.py  cli.py  client.py  sessions.py  tools.py  ui.py
src/farcode/: _env.py  chat.py  cli.py  client.py  coder_md.py  commands.py  completion.py  embeddings.py  facts.py  memory.py  repomap.py  sessions.py  subagent.py  tasks.py  tools.py  ui.py  web.py
tests/: conftest.py  test_agent_loop.py  test_chat.py  test_cli.py  test_client.py  test_coder_md.py  test_embeddings.py  test_facts.py  test_focused_repomap.py  test_memory.py  test_repomap.py  test_sessions.py  test_subagent.py  test_swe_isolation.py  test_swe_locator.py  test_swe_solve.py  test_swe_stuck.py  test_tasks.py  test_tools.py  test_web.py
